--- a/erfassung.html
+++ b/erfassung.html
@@ -32,6 +32,7 @@
                 <div></div>
                 <span class="label">ID</span><input type="text" id="igelID" />
                 <span class="label">1.a Verantwortlich</span><input type="text" id="1_a" />
+                <span class="label">Notfalltelefon</span><input type="text" id="phone" />
                 <span class="label">1.b Wildtierart</span><input type="text" id="1_b" />
                 <span class="label">1.c Wildtiername</span><input type="text" id="1_c" />
                 <span class="label">2.a Funddatum</span><input type="text" id="2_a" />
@@ -68,7 +69,7 @@
             return null;
         }
 
-        let ids = [ "igelID", "1_a", "1_b", "1_c", "2_a", "2_b", "2_c", "2_d", "2_e", "2_f", "2_g", "2_h", "2_i", "2_j", "3_a", "3_b", "3_c", "3_d"];
+        let ids = [ "igelID", "phone", "1_a", "1_b", "1_c", "2_a", "2_b", "2_c", "2_d", "2_e", "2_f", "2_g", "2_h", "2_i", "2_j", "3_a", "3_b", "3_c", "3_d"];
         function clear() {
             document.getElementById('input-text').value = "";
             for (let id of ids) {
