--- a/erfassung.html
+++ b/erfassung.html
@@ -69,7 +69,7 @@
             return null;
         }
 
-        let ids = [ "igelID", "phone", "1_a", "1_b", "1_c", "2_a", "2_b", "2_c", "2_d", "2_e", "2_f", "2_g", "2_h", "2_i", "2_j", "3_a", "3_b", "3_c", "3_d"];
+        let ids = [ "igelID", "1_a", "phone",, "1_b", "1_c", "2_a", "2_b", "2_c", "2_d", "2_e", "2_f", "2_g", "2_h", "2_i", "2_j", "3_a", "3_b", "3_c", "3_d"];
         function clear() {
             document.getElementById('input-text').value = "";
             for (let id of ids) {
